# numpy-to-genAI

./: .gitignore  README.md  conf.py  dev_requirements.txt  index.rst  make.bat  module.1.1.1_test.py  package-lock.json  pyproject.toml  requirements.txt  requirements_workshop.txt  requirements_workshop_gpu.txt  simple_grayscale.py  z-module-script-test.py
.github/workflows/: pages.yml
_build/html/: .buildinfo  CLAUDE.html  README.html  genindex.html  index.html  objects.inv  project_status.html  search.html  searchindex.js
_build/html/.doctrees/: CLAUDE.doctree  README.doctree  environment.pickle  index.doctree  project_status.doctree
_build/html/_sources/: CLAUDE.md.txt  index.rst.txt  project_status.md.txt
_build/html/_static/: github-icon.js
_static/: carousel.css  carousel.js  content.css  footer.css  github-icon.css  github-icon.js  modules.css  scroll-progress.css  scroll-progress.js
_templates/: navbar-nav.html
content/01_first_steps/flags/: README.rst
content/01_first_steps/grayscale/: README.rst
content/01_first_steps/repeat/: README.rst
content/01_first_steps/rgb/: README.rst
content/02_elementary_geometry/circles/: README.rst
content/02_elementary_geometry/gradient/: README.rst
content/02_elementary_geometry/lines/: README.rst
content/02_elementary_geometry/mask/: README.rst
content/02_elementary_geometry/memegen/: README.rst
content/02_elementary_geometry/spiral/: README.rst
content/02_elementary_geometry/stars/: README.rst
content/02_elementary_geometry/triangles/: README.rst
content/03_machine_learning/convolution/: README.rst
content/03_machine_learning/dtree/: README.rst
content/03_machine_learning/kmeans/: README.rst
content/03_machine_learning/montecarlo/: README.rst
content/04_effects/contour/: README.rst
content/04_effects/hexpanda/: README.rst
content/04_effects/puzzle/: README.rst
content/04_effects/rotate/: README.rst
content/04_effects/shadow/: README.rst
content/04_effects/sobel/: README.rst
content/04_effects/warhol/: README.rst
content/05_fractals/dragon_curve/: README.rst
content/05_fractals/mandelbrot/: README.rst
content/06_animations/bouncing_ball/: README.rst
content/06_animations/flower_movie/: README.rst
content/06_animations/vortex/: README.rst
content/Module_00_foundations_definitions/0.1_what_is_generative_art/: README.rst
content/Module_00_foundations_definitions/0.2_defining_ai_ml_algorithms/: README copy.rst  README.rst
content/Module_00_foundations_definitions/0.3_images_as_data/: README.rst
content/Module_00_foundations_definitions/0.4_setup_environment/: README.rst
content/Module_01_pixel_fundamentals/1.1_grayscale_color_basics/: README.rst
content/Module_01_pixel_fundamentals/1.3_structured_compositions/: README.rst
content/Module_02_geometry_mathematics/2.2_coordinate_systems_fields/: README.rst
content/Module_02_geometry_mathematics/2.3_mathematical_art/: README.rst
content/Module_03_transformations_effects/3.1_geometric_transformations/: README.rst
content/Module_03_transformations_effects/3.3_artistic_filters/: README.rst
content/Module_04_fractals_recursion/4.2_natural_fractals/: README.rst
content/Module_05_simulation_emergent_behavior/5.3_physics_simulations/: README.rst
content/Module_05_simulation_emergent_behavior/5.4_growth_morphogenesis/: README.rst
content/Module_06_noise_procedural_generation/6.1_noise_functions/: README.rst
content/Module_06_noise_procedural_generation/6.2_terrain_generation/: README.rst
content/Module_06_noise_procedural_generation/6.3_texture_synthesis/: README.rst
content/Module_06_noise_procedural_generation/6.4_wave_interference_patterns/: README.rst
content/Module_08_animation_time/8.2_organic_motion/: README.rst
content/Module_08_animation_time/8.4_generative_animation/: README.rst
content/Module_09_intro_neural_networks/9.2_network_architectures/: README.rst
content/animations/image_transformations/: README.rst
(+1037 files in other folders)
