# Pixels2GenAI: Educational Platform
# ===================================
# From pixel manipulation to Generative AI
# 15 progressive modules covering generative art and machine learning
#
# Install options:
#   pip install .              # Core dependencies only
#   pip install .[ml]          # + Machine learning (PyTorch, TensorFlow)
#   pip install .[docs]        # + Documentation build
#   pip install .[dev]         # + Development tools
#   pip install .[all]         # Everything

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixels2genai"
version = "1.0.0"
description = "Educational platform: From pixel manipulation to Generative AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Burak Kagan Yilmazer"},
]
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Education",
]
keywords = [
    "generative-art",
    "numpy",
    "machine-learning",
    "deep-learning",
    "diffusion-models",
    "neural-networks",
    "image-processing",
    "creative-coding",
    "educational",
]

# Core dependencies (Modules 0-6, basic image processing)
dependencies = [
    # Numerical computing
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    # Image processing
    "pillow>=8.3.0",
    "imageio>=2.9.0",
    # Visualization
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    # Animation
    "pygame>=2.0.0",
    # Noise generation
    "noise>=1.2.2",
    "perlin-noise>=1.7",
]

[project.optional-dependencies]
# Machine learning and AI (Modules 7-13)
ml = [
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.6.0",
    "tqdm>=4.62.0",
    "denoising-diffusion-pytorch>=1.0.0",
    "opencv-python>=4.5.0",
    "mediapipe>=0.10.0",
]

# Computer vision and interactive systems (Modules 11, 13)
cv = [
    "opencv-python>=4.5.0",
    "mediapipe>=0.10.0",
]

# Audio processing (optional for music visualization)
audio = [
    "librosa>=0.8.0",
    "soundfile>=0.10.0",
]

# 3D graphics
graphics3d = [
    "trimesh>=3.9.0",
    "pyglet>=1.5.0",
]

# Jupyter notebook support
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]

# Web and networking
web = [
    "requests>=2.25.0",
    "websockets>=8.1",
]

# Documentation build
docs = [
    "sphinx>=4.0.0",
    "sphinx-design>=0.2.0",
    "sphinx-copybutton>=0.4.0",
    "myst-parser>=0.15.0",
    "pydata-sphinx-theme>=0.8.0",
    "furo>=2021.6.0",
]

# Development tools
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
]

# Performance optimization
performance = [
    "numba>=0.53.0",
]

# All optional dependencies
all = [
    "pixels2genai[ml,cv,audio,graphics3d,jupyter,web,docs,dev,performance]",
]

[project.urls]
Homepage = "https://burakkagann.github.io/Pixels2GenAI/"
Repository = "https://github.com/burakkagann/Pixels2GenAI"
Documentation = "https://burakkagann.github.io/Pixels2GenAI/"
"Bug Tracker" = "https://github.com/burakkagann/Pixels2GenAI/issues"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.rst", "*.png", "*.gif", "*.jpg"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | _build
    | \.eggs
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
